# CVMPP

./: .gitignore  CMakeLists.txt  README.md  current_status.md  future_plan.md  start_up.md
artifacts/: limitation_unsupported_operator.cvm
artifacts/logs/: example_suite_results.csv
artifacts/reports/: analysis_findings.md  run_recordings.md
cvm/visualiser/: main.cpp
examples/: function_test.cvm  if_test.cvm  loop_test.cvm  math_test.cvm  run1.cvm  test.cvm
examples/successful/: 04_unary_negative.cvm  05_variable_reassign.cvm  07_if_true_branch.cvm  08_if_else_false_branch.cvm  09_nested_if.cvm  10_while_countdown_sum.cvm  11_factorial_6.cvm  12_equality_true.cvm  13_equality_false.cvm  14_chained_assignments.cvm  15_nested_blocks.cvm  16_complex_expression.cvm  17_input_compare_low.cvm  19_while_zero_iterations.cvm  20_fibonacci_iterative.cvm  21_function_basic_return.cvm  22_recursive_factorial.cvm  23_scope_shadowing.cvm  24_implicit_return_zero.cvm  25_expected_payoff_calc.cvm  99_boss_fight.cvm  99_most_complex_prime_scan.cvm
examples/unsuccessful/: 01_unsupported_greater_than.cvm  02_unsupported_not_equal.cvm  03_missing_semicolon.cvm  04_missing_closing_paren.cvm  05_missing_closing_brace.cvm  07_undefined_variable_print.cvm  08_division_by_zero.cvm  10_double_operator.cvm  11_else_without_if.cvm  12_bad_identifier_start.cvm  13_unknown_character.cvm  15_unterminated_while_block.cvm  16_assignment_without_rhs.cvm  17_input_missing_operand.cvm  19_missing_condition_if.cvm  20_runtime_division_nested.cvm  (+1 more)
src/: main.cpp
src/backend/: compiler.cpp  vm.h  (+2 more)
(+8 files in other folders)
